force-app/main/default/objects/Contact/fields/FAQP_Division__c.field-meta.xml
<CustomField>
    <fullName>FAQP_Division__c</fullName>
    <label>FAQP Division</label>
    <length>255</length>
    <type>Text</type>
</CustomField>