force-app/main/default/objects/Contact/fields/FAQP_Is_Retired_Officer__c.field-meta.xml
<CustomField>
    <fullName>FAQP_Is_Retired_Officer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Retired Officer</label>
    <type>Checkbox</type>
</CustomField>