force-app/main/default/objects/Contact/fields/FAQP_Retired_Peace_Officer_Type__c.field-meta.xml
<CustomField>
    <fullName>FAQP_Retired_Peace_Officer_Type__c</fullName>
    <label>Retired Peace Officer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Retired Peace Officer/Non-DPS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>