force-app/main/default/objects/Contact/fields/FAQP_TINS_NUMBER__c.field-meta.xml
<CustomField>
    <fullName>FAQP_TINS_NUMBER__c</fullName>
    <label>TINS</label>
    <length>50</length>
    <type>Text</type>
</CustomField>