force-app/main/default/objects/Contact/fields/FAQP_Year_Retired__c.field-meta.xml
<CustomField>
    <fullName>FAQP_Year_Retired__c</fullName>
    <label>Year Retired</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>