force-app/main/default/objects/Contact/fields/FIR_Form__c.field-meta.xml
<CustomField>
    <fullName>FIR_Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FIR Form</label>
    <referenceTo>FIR_Form__c</referenceTo>
    <relationshipLabel>FIR Forms</relationshipLabel>
    <relationshipName>FIRForms</relationshipName>
    <type>Lookup</type>
</CustomField>