force-app/main/default/objects/Contact/fields/Recruit_Class__c.field-meta.xml
<CustomField>
    <fullName>Recruit_Class__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recruit Class</label>
    <referenceTo>Recruit_Class__c</referenceTo>
    <relationshipLabel>Recruit Class Members</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>