force-app/main/default/objects/Contact/recordTypes/FAQP_Contact.recordType-meta.xml
<RecordType>
    <fullName>FAQP_Contact</fullName>
    <active>true</active>
    <label>FAQP Contact</label>
</RecordType>